--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" async />
 </head>
 
 <body>
@@ -155,13 +156,12 @@
                         <div class="grid-x">
                             <div class="callout grid-x">
                                 <div class="small-2">
-                                    R$ 30,00
-                                    (R$ 1,00 POR DIA)
+                                    R$ 30,00 (R$ 1,00 POR DIA)
                                 </div>
                                 <div class="small-1"> = </div>
                                 <div class="small-8">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam mauris, eleifend
-                                        egestas sollicitudin eget, tempus vitae mi. Nam lectus.
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam mauris, eleifend egestas sollicitudin eget, tempus
+                                    vitae mi. Nam lectus.
                                 </div>
                             </div>
                         </div>
@@ -205,9 +205,42 @@
             </div>
         </div>
         <div class="pink-gradient-content no-bottom-padding">
-            <div class="grid-container grid-x">
-                <div class="cell text-center">
-                    <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
+            <div class="grid-x">
+                <div class="small-12 medium-8 grid-container">
+                    <div class="orbit" role="region" aria-label="Fotos do Novo Rumo" data-orbit>
+                        <div class="orbit-wrapper">
+                            <div class="orbit-controls">
+                                <button class="orbit-previous">
+                                    <span class="show-for-sr">Voltar</span>&#9664;&#xFE0E;</button>
+                                <button class="orbit-next">
+                                    <span class="show-for-sr">Próximo</span>&#9654;&#xFE0E;</button>
+                            </div>
+                            <ul class="orbit-container">
+                                <li class="is-active orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="Space">                                        
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/artesanato-em-mesa.jpg" alt="Space">
+                                        <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/bazar.jpg" alt="Space">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/roda.jpg" alt="Space">
+                                    </figure>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
                         <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg">
                     </div>
@@ -246,7 +279,7 @@
                     <div  class="small-4 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
                         data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
                         <img src="images/dia-a-dia/cozinhando.jpg">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
