--- a/web/index.html
+++ b/web/index.html
@@ -240,46 +240,17 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- <div class="small-8 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg">
-                    </div>
-                    <div class="small-6 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-1000px,0px);-moz-transform: translate3d(0px,-1000px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/artesanato-em-mesa.jpg">
-                    </div>
-                    <div class="small-4 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-500px,0px);-moz-transform: translate3d(0px,-500px,0px);transform: translate3d(0px,-500px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/bazar.jpg">
-                    </div>
-                    <div class="small-5 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="/images/dia-a-dia/roda.jpg">
-                    </div>
-                    <div class="small-7 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/selfie-roda.jpg">
-                    </div>
-                    <div class="small-7 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="images/dia-a-dia/brigadeiro.jpg">
-                    </div>
-                    <div class="small-6 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="/images/dia-a-dia/porta-porteira-portão.jpg">
-                    </div>
-                    <div class="small-6 cell float-right" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="images/dia-a-dia/arte.jpeg">
-                    </div>
-                    <div  class="small-8 cell float-center" data-bottom-top="-webkit-transform: translate3d(0px,-100px,0px);-moz-transform: translate3d(0px,-100px,0px);transform: translate3d(0px,-100px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);">
-                        <img src="images/dia-a-dia/carnaval.jpg">
-                    </div>
-                    <div  class="small-4 cell float-left" data-bottom-top="-webkit-transform: translate3d(0px,-200px,0px);-moz-transform: translate3d(0px,-200px,0px);transform: translate3d(0px,-200px,0px);"
-                        data-top-bottom="-webkit-transform: translate3d(0px,0px,0px);-moz-transform: translate3d(0px,0px,0px);transform: translate3d(0px,0px,0px);">
-                        <img src="images/dia-a-dia/cozinhando.jpg">
-                    </div> -->
+                    /images/dia-a-dia/exercicio-ao-ar-livre.jpg
+                    /images/dia-a-dia/artesanato-em-mesa.jpg
+                    /images/dia-a-dia/bazar.jpg
+                    /images/dia-a-dia/roda.jpg
+                    /images/dia-a-dia/selfie-roda.jpg
+                    images/dia-a-dia/brigadeiro.jpg
+                    /images/dia-a-dia/porta-porteira-portão.jpg
+                    images/dia-a-dia/arte.jpeg
+                    images/dia-a-dia/carnaval.jpg
+                    images/dia-a-dia/cozinhando.jpg
+                    
                 </div>
             </div>
         </div>
