--- a/web/index.html
+++ b/web/index.html
@@ -195,16 +195,10 @@
                 </div>
             </div>
         </div>
-        <div class="pink-gradient-content stripe" id="dia-a-dia">
-            <div class="grid-container grid-x">
-                <div class="cell text-center">
-                    <div class="small-12 cell">
-                        <h3>Dia-a-dia</h3>
-                    </div>
-                </div>
+        <div class="pink-gradient-content no-bottom-padding" id="dia-a-dia">
+            <div class="cell text-center">
+                <h3>Dia-a-dia</h3>
             </div>
-        </div>
-        <div class="pink-gradient-content no-bottom-padding">
             <div class="grid-x">
                 <div class="small-12 medium-8 grid-container">
                     <div class="orbit" role="region" aria-label="Fotos do Novo Rumo" data-orbit>
@@ -218,39 +212,57 @@
                             <ul class="orbit-container">
                                 <li class="is-active orbit-slide">
                                     <figure class="orbit-figure">
-                                        <img class="orbit-image" src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="Space">                                        
+                                        <img class="orbit-image" src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="">
                                     </figure>
                                 </li>
                                 <li class="orbit-slide">
                                     <figure class="orbit-figure">
-                                        <img class="orbit-image" src="/images/dia-a-dia/artesanato-em-mesa.jpg" alt="Space">
-                                        <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                                        <img class="orbit-image" src="/images/dia-a-dia/artesanato-em-mesa.jpg" alt="">
                                     </figure>
                                 </li>
                                 <li class="orbit-slide">
                                     <figure class="orbit-figure">
-                                        <img class="orbit-image" src="/images/dia-a-dia/bazar.jpg" alt="Space">
+                                        <img class="orbit-image" src="/images/dia-a-dia/bazar.jpg" alt="">
                                     </figure>
                                 </li>
                                 <li class="orbit-slide">
                                     <figure class="orbit-figure">
-                                        <img class="orbit-image" src="/images/dia-a-dia/roda.jpg" alt="Space">
+                                        <img class="orbit-image" src="/images/dia-a-dia/roda.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/selfie-roda.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/brigadeiro.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/porta-porteira-portão.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/arte.jpeg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/carnaval.jpg" alt="">
+                                    </figure>
+                                </li>
+                                <li class="orbit-slide">
+                                    <figure class="orbit-figure">
+                                        <img class="orbit-image" src="/images/dia-a-dia/cozinhando.jpg" alt="">
                                     </figure>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    /images/dia-a-dia/exercicio-ao-ar-livre.jpg
-                    /images/dia-a-dia/artesanato-em-mesa.jpg
-                    /images/dia-a-dia/bazar.jpg
-                    /images/dia-a-dia/roda.jpg
-                    /images/dia-a-dia/selfie-roda.jpg
-                    images/dia-a-dia/brigadeiro.jpg
-                    /images/dia-a-dia/porta-porteira-portão.jpg
-                    images/dia-a-dia/arte.jpeg
-                    images/dia-a-dia/carnaval.jpg
-                    images/dia-a-dia/cozinhando.jpg
-                    
                 </div>
             </div>
         </div>
