--- a/web/layout.html
+++ b/web/layout.html
@@ -131,73 +131,6 @@
             background-color: #f7e4e1;
             box-shadow: none;
         }
-
-        .loader {
-            position: relative;
-            margin: 0px auto;
-            width: 100px;
-            height: 100px;
-            zoom: $zoom;
-        }
-
-        .circular {
-            animation: rotate 2s linear forwards;
-            width: 100px;
-            height: 100px;
-            position: relative
-        }
-
-        .path {
-            stroke: #007aff;
-            stroke-dasharray: 1, 200;
-            stroke-dashoffset: 0;
-            animation: dash 1.5s ease-in-out forwards,
-            color 6s ease-in-out infinite;
-            stroke-linecap: round;
-        }
-
-        @keyframes dash {
-            0% {
-                stroke-dasharray: 1, 200;
-                stroke-dashoffset: 0;
-            }
-
-            100% {
-                stroke-dasharray: 150, 200;
-                stroke-dashoffset: 10;
-            }
-
-        }
-
-        @keyframes rotate {
-            100% {
-                transform: rotate(360deg)
-            }
-        }
-
-        .checkmark__check {
-            transform-origin: 50% 50%;
-            stroke-dasharray: 48;
-            stroke-dashoffset: 48;
-
-            animation: stroke 0.5s cubic-bezier(0.65, 0, 0.45, 1) 1.5s forwards;
-        }
-
-        @keyframes stroke {
-            100% {
-                stroke-dashoffset: 0;
-            }
-        }
-
-        .suc {
-            stroke: #007aff;
-            stroke-width: 2;
-            position: absolute;
-            top: 30px;
-            left: 30px;
-            width: 40px;
-            height: 40px;
-        }
     </style>
 </head>
 
@@ -228,6 +161,9 @@
                     <svg class="suc">
                         <path class="checkmark__check" fill="none" d="M10.7,20.4l5.3,5.3l12.4-12.5"></path>
                     </svg>
+                </div>
+                <div class="callout success">
+                    <p>Operação realizada com sucesso!</p>
                 </div>
             </div>
         </div>
