--- a/web/index.html
+++ b/web/index.html
@@ -33,9 +33,6 @@
                         <a href="#quem-somos">Quem somos</a>
                     </li>
                     <li>
-                        <a href="#seja-um-doador">Seja um doador</a>
-                    </li>
-                    <li>
                         <a href="#eventos">Eventos</a>
                     </li>
                     <li>
@@ -43,6 +40,9 @@
                     </li>
                     <li>
                         <a href="#contato">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#seja-um-doador" class="button hollow">Doe agora</a>
                     </li>
                 </ul>
             </div>
@@ -58,9 +58,6 @@
                         <a href="#quem-somos">Quem somos</a>
                     </li>
                     <li>
-                        <a href="#seja-um-doador">Seja um doador</a>
-                    </li>
-                    <li>
                         <a href="#eventos">Eventos</a>
                     </li>
                     <li>
@@ -68,6 +65,9 @@
                     </li>
                     <li>
                         <a href="#contato">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#seja-um-doador" class="button hollow">Doe agora</a>
                     </li>
                 </ul>
             </div>
