Melhorias no design

--- a/web/index.html
+++ b/web/index.html
@@ -384,13 +384,11 @@
             }
         });
 
-        var prev = 0;
         var $window = $(window);
         var nav = $('.scrollhide-nav');
         $window.on('scroll', function () {
             var scrollTop = $window.scrollTop();
-            nav.toggleClass('hidden', scrollTop > prev);
-            prev = scrollTop;
+            nav.toggleClass('hidden', scrollTop != 0);
         });
 
         function initSkroll() {
