--- a/web/index.html
+++ b/web/index.html
@@ -24,34 +24,100 @@
 
     <!-- RESPONSIVE MENU -->
     <div class="scrollhide-nav">
-        <div class="navigation__overlay [ fixed pin w-full h-full z-7 ] [ bg-grey-darkest ]" role="complementary"></div>
-        <div class="title-bar" data-responsive-toggle="responsive-menu" data-hide-for="medium">
+        <div class="title-bar-overlay" role="complementary"></div>
+        <div class="title-bar" data-hide-for="medium">
             <div id="nav-icon4">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-        </div>
-        <div class="top-bar show-for-small-only" id="responsive-menu">
-            <div class="top-bar-left">
-                <ul class="medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
-                    <li>
-                        <a href="#quem-somos">Quem somos</a>
-                    </li>
-                    <li>
-                        <a href="#eventos">Eventos</a>
-                    </li>
-                    <li>
-                        <a href="#dia-a-dia">Dia-a-dia</a>
-                    </li>
-                    <li>
-                        <a href="#contato">Contato</a>
-                    </li>
-                    <li>
-                        <a href="#seja-um-doador" class="button hollow">Doe agora</a>
-                    </li>
-                </ul>
-            </div>
+            <nav class="navigation__items">
+                <div class="navigation__items__scroller [ flex flex-col-reverse ]">
+                    <aside class="navigation__menu [ flex flex-col md:flex-row md:items-center ] [ font-america md:font-america-condensed ]">
+                        <div class="navigation__menu-item [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="javascript:;" title="" class="[ inline-flex items-center ] [ mr-auto ]" data-target-id="39741">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">About us</span>
+
+                                <span class="icon icon-trending-flat icon--red navigation__arrow icon-nav-trending-flat [ ml-15 mr-15 mt-3 ]">
+                                    <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 9">
+                                        <path fill-rule="evenodd" d="M19.068 4.5L15.25 8.318V5.443H.875V3.557H15.25V.682z"></path>
+                                    </svg>
+                                </span>
+                                <span class="icon icon-caret icon--red navigation__arrow icon-nav-arrow">
+                                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 7.4" style="enable-background:new 0 0 12 7.4;"
+                                        xml:space="preserve">
+                                        <path d="M1.4,0L6,4.6L10.6,0L12,1.4l-6,6l-6-6L1.4,0z"></path>
+                                    </svg>
+                                </span>
+                            </a>
+                            <i></i>
+                        </div>
+                        <!-- /.navigation__menu-item -->
+                        <div class="navigation__menu-item [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="javascript:;" title="" class="[ inline-flex items-center ] [ mr-auto ]" data-target-id="39541">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">What We Do</span>
+
+                                <span class="icon icon-trending-flat icon--red navigation__arrow icon-nav-trending-flat [ ml-15 mr-15 mt-3 ]">
+                                    <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 9">
+                                        <path fill-rule="evenodd" d="M19.068 4.5L15.25 8.318V5.443H.875V3.557H15.25V.682z"></path>
+                                    </svg>
+                                </span>
+                                <span class="icon icon-caret icon--red navigation__arrow icon-nav-arrow">
+                                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 7.4" style="enable-background:new 0 0 12 7.4;"
+                                        xml:space="preserve">
+                                        <path d="M1.4,0L6,4.6L10.6,0L12,1.4l-6,6l-6-6L1.4,0z"></path>
+                                    </svg>
+                                </span>
+                            </a>
+                            <i></i>
+                        </div>
+                        <!-- /.navigation__menu-item -->
+                        <div class="navigation__menu-item [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="javascript:;" title="" class="[ inline-flex items-center ] [ mr-auto ]" data-target-id="40211">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">Where we work</span>
+
+                                <span class="icon icon-trending-flat icon--red navigation__arrow icon-nav-trending-flat [ ml-15 mr-15 mt-3 ]">
+                                    <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 9">
+                                        <path fill-rule="evenodd" d="M19.068 4.5L15.25 8.318V5.443H.875V3.557H15.25V.682z"></path>
+                                    </svg>
+                                </span>
+                                <span class="icon icon-caret icon--red navigation__arrow icon-nav-arrow">
+                                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 7.4" style="enable-background:new 0 0 12 7.4;"
+                                        xml:space="preserve">
+                                        <path d="M1.4,0L6,4.6L10.6,0L12,1.4l-6,6l-6-6L1.4,0z"></path>
+                                    </svg>
+                                </span>
+                            </a>
+                            <i></i>
+                        </div>
+                        <!-- /.navigation__menu-item -->
+                        <div class="navigation__menu-item [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="/resource-centre" title="" class="[ inline-flex items-center ] [ mr-auto ]">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">Resources</span>
+
+                            </a>
+                            <i></i>
+                        </div>
+                        <!-- /.navigation__menu-item -->
+                        <div class="navigation__menu-item [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="/latest" title="" class="[ inline-flex items-center ] [ mr-auto ]">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">Latest</span>
+
+                            </a>
+                            <i></i>
+                        </div>
+                        <!-- /.navigation__menu-item -->
+
+                        <div class="navigation__menu-item navigation__menu-item--donate [ md:relative md:flex md:flex-row md:items-center md:mr-19 ] [ lg:mr-43 ]">
+                            <a href="/donate" title="Donate" class="[ inline-flex items-center ] [ mr-auto ]">
+                                <span class="eyebrow [ m-0 ] [ font-america-condensed text-10 leading-15 tracking-wide uppercase no-underline ] [ lg:text-12 lg:leading-22 ] [ text-black ]">Donate</span>
+
+                            </a>
+                            <i></i>
+                        </div>
+                    </aside>
+                </div>
+            </nav>
         </div>
     </div>
 
@@ -363,15 +429,16 @@
 
         var $window = $(window);
         var nav = $('.scrollhide-nav');
+        var indicadorAberturaMenu = false;
         $window.on('scroll', function () {
             var scrollTop = $window.scrollTop();
-            nav.toggleClass('hidden', scrollTop != 0);
+            nav.toggleClass('hidden', (scrollTop != 0 && !indicadorAberturaMenu));
         });
-
 
         $('#nav-icon4').click(function () {
             $(this).toggleClass('open');
-            $('body').addClass('nav-expanded');
+            $('body').toggleClass('nav-expanded');
+            indicadorAberturaMenu = !indicadorAberturaMenu;
         });
 
         function initSkroll() {
